--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
     margin:0;
     padding:0;
     font-family: sans-serif;
-    background: linear-gradient(132deg, rgb(0, 0, 0),rgb(12, 208, 243));
+    background: linear-gradient(132deg, rgb(225, 12, 245),rgb(12, 208, 243));
     background-size: 400% 400%;
     animation: BackgroundGradient 30s ease infinite;
   }
@@ -21,7 +21,9 @@ html {
     text-transform: uppercase;
     text-align: center;
     font-size: 2em;
-    padding: 5px;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0 15px 25px rgba(245, 6, 225, 0.6);
   }
   
   @keyframes BackgroundGradient {
@@ -44,6 +46,7 @@ html {
 
   a {
     margin-left: 25%;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
   }
 
   .login-box h2 {
@@ -106,9 +109,9 @@ html {
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
+                0 0 25px #e003f4,
+                0 0 50px #f403f4,
+                0 0 100px #f403cc;
   }
   
   .login-box a span {
