--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ html {
   a {
     margin-left: 25%;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
   }
 
   .login-box h2 {
@@ -140,14 +141,14 @@ html {
     animation: btn-anim1 1s linear infinite;
   }
   
-  @keyframes btn-anim1 {
+  /* @keyframes btn-anim1 {
     0% {
       left: -100%;
     }
     50%,100% {
       left: 100%;
     }
-  }
+  } */
   
   .login-box a span:nth-child(2) {
     top: -100%;
@@ -159,16 +160,16 @@ html {
     animation-delay: .25s
   }
   
-  @keyframes btn-anim2 {
+  /* @keyframes btn-anim2 {
     0% {
       top: -100%;
     }
     50%,100% {
       top: 100%;
     }
-  }
+  } */
   
-  .login-box a span:nth-child(3) {
+  .login-box span:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -197,11 +198,11 @@ html {
     animation-delay: .75s
   }
   
-  @keyframes btn-anim4 {
+  /* @keyframes btn-anim4 {
     0% {
       bottom: -100%;
     }
     50%,100% {
       bottom: 100%;
     }
-  }
+  } */
