--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
     border-radius: 50%;
     margin: 0 auto;
     margin-bottom: 10px;
-    box-shadow: 0px 6px 2px #d7dbdb;
+    box-shadow: 0px 3px 3px #eaeeee, 0 15px 25px rgba(0,0,0,.6);
 }
 
   h1 {
@@ -33,11 +33,21 @@ html {
     text-align: center;
     font-size: 2em;
     padding: 25px;
+    background: linear-gradient(132deg, rgb(12, 208, 243),rgb(225, 12, 245));
+    background-size: 400% 400%;
+    animation: BackgroundGradient2 10s ease infinite;
     border-radius: 15px;
-    box-shadow: 0 15px 25px rgba(245, 6, 225, 0.6);
+    box-shadow:  0 20px 25px rgba(0,0,0,.6);
   }
   
+  
   @keyframes BackgroundGradient {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+  }
+
+  @keyframes BackgroundGradient2 {
     0% {background-position: 0% 50%;}
     50% {background-position: 100% 50%;}
     100% {background-position: 0% 50%;}
@@ -100,7 +110,7 @@ html {
     top: -20px;
     left: 0;
     color: #03e9f4;
-    font-size: 12px;
+    font-size: 16px;
   }
   
   .login-box form a {
